Refactor package structure and update version to 1.0.2